selfhost/tests/neg/idxassign.ail
// EXPECT: cannot assign str to element of type i64
mu xs := [1, 2, 3]
xs[0] = "no"
